--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ torchtext==0.4.0
 tqdm>=4.27
 transformers>=4.3.3
 windPyTorchUtils==1.0.2
-windPyUtils>=1.0.6
+windPyUtils==1.0.6
 hyperopt==0.2.5
